[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/OptionsOverlay/OptionsOverlay.gd" type="Script" id=1]
[ext_resource path="res://Menus/BG.png" type="Texture" id=2]
[ext_resource path="res://Menus/MenuText.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/MenuButton/MenuButton.tscn" type="PackedScene" id=4]

[node name="OptionsOverlay" type="Container"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 373.0
margin_top = 197.0
margin_right = 405.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -373.0
margin_top = -197.0
margin_right = 267.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]

[node name="Volume" type="Node2D" parent="." index="1"]

position = Vector2( 43, -5 )

[node name="Music" type="Node2D" parent="Volume" index="0"]

position = Vector2( 0, 37.05 )

[node name="MusicSlider" type="HSlider" parent="Volume/Music" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -181.0
margin_top = -93.0
margin_right = 11.0
margin_bottom = -77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 20.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Music" parent="Volume/Music" index="1" instance=ExtResource( 3 )]

margin_left = -352.0
margin_top = -101.0
margin_right = -70.0
margin_bottom = 25.0
text = "Music"

[node name="Master" type="Node2D" parent="Volume" index="1"]

position = Vector2( 0, -1.36462 )
scale = Vector2( 1, 0.999999 )

[node name="MasterSlider" type="HSlider" parent="Volume/Master" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -181.0
margin_top = -93.0
margin_right = 11.0
margin_bottom = -77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 20.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Master" parent="Volume/Master" index="1" instance=ExtResource( 3 )]

margin_left = -352.0
margin_top = -95.0
margin_right = -70.0
margin_bottom = 31.0
text = "Master"

[node name="SFX" type="Node2D" parent="Volume" index="2"]

position = Vector2( 0, 40.85 )

[node name="SFXSlider" type="HSlider" parent="Volume/SFX" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -181.0
margin_top = -60.0
margin_right = 11.0
margin_bottom = -44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 20.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="SFX" parent="Volume/SFX" index="1" instance=ExtResource( 3 )]

margin_left = -352.0
margin_top = -73.0
margin_right = 182.0
margin_bottom = 53.0
text = "Sound Effects"

[node name="Volume" parent="Volume" index="3" instance=ExtResource( 3 )]

margin_left = -384.0
margin_top = -128.0
margin_right = -102.0
margin_bottom = -2.0
text = "Volume"

[node name="BackButton" parent="." index="2" instance=ExtResource( 4 )]

margin_left = -149.0
margin_top = 59.0
margin_right = 75.0
margin_bottom = 95.0

[node name="Label" parent="BackButton" index="0"]

text = "Back"

[node name="Options" parent="." index="3" instance=ExtResource( 3 )]

margin_left = -85.0
margin_top = -176.0
margin_right = 209.0
margin_bottom = -50.0
text = "Options"

[connection signal="value_changed" from="Volume/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]

[connection signal="value_changed" from="Volume/Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]

[connection signal="value_changed" from="Volume/SFX/SFXSlider" to="." method="_on_SFXSlider_value_changed"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


[editable path="BackButton"]
